--- a/app/src/main/res/layout/item_diary_entry.xml
+++ b/app/src/main/res/layout/item_diary_entry.xml
@@ -22,4 +22,30 @@
         android:textSize="14sp"
         android:text="@string/dateTime" />
 
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal">
+
+
+        <Button
+            android:id="@+id/buttonEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            android:text="@string/edit"/>
+
+        <Button
+            android:id="@+id/buttonView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/viewMore"/>
+    </LinearLayout>
+
 </LinearLayout>
+
+
